plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1' // Usando una versión estable y recomendada
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // --- Spring Web ---
    // Para crear aplicaciones web, APIs REST. Incluye Tomcat y Jackson.
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // --- Persistencia de Datos ---
    // Para interactuar con la base de datos usando JPA. Incluye Hibernate.
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // Driver específico para PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    // --- Seguridad ---
    // Para la seguridad general, autenticación y autorización.
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // Para la integración con proveedores OAuth2 como Google.
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // Para la creación y validación de JSON Web Tokens (JWT).
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5' // O 'jjwt-gson' si prefieres Gson

    // --- Utilidades ---
    // Para enviar correos electrónicos.
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    // Para facilitar la creación de constructores, getters, setters, etc.
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // --- Pruebas (Testing) ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}